kubernetes/workloads/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
