kubernetes/workloads/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: jellyseerr.pynenborg.com
      http:
        paths:
          - backend:
              service:
                name: jellyseerr
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jellyseerr.pynenborg.com
      secretName: jellyseerr-tls
